--- a/src/main/resources/com/mycompany/sample/main.properties
+++ b/src/main/resources/com/mycompany/sample/main.properties
@@ -1,3 +1,8 @@
-button.text=Change Color!
-color.text=Colored Text!
-label.text=Hello %s, version %s!
+lblBankaccount.text = Bankaccount Balance
+lblBankaccountBalance.text = Account Balance
+btnDeposit.text = DEPOSIT
+btnWithdraw.text = WITHDRAW
+btnWalletDetails.text = ENTER WALLET
+btnNewWallet.text = NEW WALLET
+cmbWalletCurrency.text = CHOOSE CRYPTO
+btnClose.text = EXIT
